--- a/src/about.html
+++ b/src/about.html
@@ -245,6 +245,10 @@
       <load src="./components/cta.html" />
     </main>
 
+    <load src="./components/request_popup.html" />
+
+    <load src="./components/popup-mini.html" />
+
     <load src="./components/footer.html" />
 
     <script type="module" src="js/main.js"></script>
