--- a/src/404.html
+++ b/src/404.html
@@ -48,7 +48,8 @@
       .e-page__title {
         font-family: "Unbounded", sans-serif;
         font-weight: 400;
-        font-size: 120px;
+        font-size: 100px;
+        white-space: nowrap;
       }
 
       .e-page__description {
@@ -57,74 +58,102 @@
         font-size: 22px;
       }
 
+      .e-page__footer {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 60px;
+      }
+
       #content > .footer,
       #content > .footer-bottom {
         display: none;
       }
 
+      @media (min-width: 393px) {
+        .e-page__title {
+          font-size: 120px;
+        }
+      }
+
       @media (min-width: 768px) {
         .e-page__title {
+          --b-size: 750px;
+          --b-speed: 2s;
           position: relative;
           display: flex;
           justify-content: center;
-          height: 250px;
-          width: 750px;
+          align-items: center;
+          width: var(--b-size);
+          height: var(--b-size);
         }
+
         .ball {
-          flex-shrink: 0;
-          padding: 20px;
-          border: 1px solid white;
-          border-radius: 50%;
-          width: 250px;
-          height: 250px;
+          position: relative;
           display: flex;
           align-items: center;
+          height: 100%;
+          width: 100%;
           justify-content: center;
+          transform-origin: center top;
+          padding: 20px;
         }
 
-        .ball__left {
+        .ball::after {
           position: absolute;
-          animation: swing-left 2s ease-in-out infinite;
+          content: "";
+          width: 100%;
+          height: 250px;
+          border-radius: 50%;
+          border: 1px solid var(--white);
+          display: flex;
+          flex-shrink: 0;
         }
 
-        .ball__right {
-          position: absolute;
-          animation: swing-right 2s ease-in-out infinite;
+        .ball:first-child {
+          animation: swing-left var(--b-speed) linear infinite;
+        }
+
+        .ball:last-child {
+          animation: swing-right var(--b-speed) linear infinite;
+        }
+
+        .e-page__footer {
+          transform: translateY(-80%);
         }
 
         @keyframes swing-left {
           0% {
-            transform: translate(-500px, -120px);
+            transform: rotate(0deg);
+            animation-timing-function: ease-out;
           }
+
           25% {
-            transform: translate(-250px, 0px);
+            transform: rotate(50deg);
+            animation-timing-function: ease-in;
           }
+
           50% {
-            transform: translate(-250px, 0px);
-          }
-          75% {
-            transform: translate(-250px, 0px);
-          }
-          100% {
-            transform: translate(-500px, -120px);
+            transform: rotate(0deg);
+            animation-timing-function: linear;
           }
         }
 
         @keyframes swing-right {
           0% {
-            transform: translate(250px, 0px);
+            transform: rotate(0deg);
+            animation-timing-function: linear;
           }
-          25% {
-            transform: translate(250px, 0px);
-          }
+
           50% {
-            transform: translate(500px, -120px);
+            transform: rotate(0deg);
+            animation-timing-function: ease-out;
           }
+
           75% {
-            transform: translate(250px, 0px);
-          }
-          100% {
-            transform: translate(250px, 0px);
+            transform: rotate(-50deg);
+            animation-timing-function: ease-in;
           }
         }
       }
@@ -156,11 +185,13 @@
               <span class="ball ball__center">0</span>
               <span class="ball ball__right">4</span>
             </div>
-            <div class="e-page__description">Oops.. Page not found.</div>
-            <a class="btn btn_primary" href="./index.html">
-              <span class="btn__text">Go the home page</span>
-              <span class="btn__icon icon-arrow-right"></span>
-            </a>
+            <div class="e-page__footer">
+              <div class="e-page__description">Oops.. Page not found.</div>
+              <a class="btn btn_primary" href="./index.html">
+                <span class="btn__text">Go the home page</span>
+                <span class="btn__icon icon-arrow-right"></span>
+              </a>
+            </div>
           </div>
         </div>
       </section>
