--- a/src/404.html
+++ b/src/404.html
@@ -14,6 +14,10 @@
     <link rel="stylesheet" href="styles/main.scss" />
     <link rel="stylesheet" href="styles/pages/index.scss" />
     <style>
+      body {
+        overflow: hidden;
+      }
+
       .e-page {
         position: relative;
         background: url("./assets/img/404/bg.jpg") no-repeat 50% 50% / cover;
@@ -79,7 +83,7 @@
 
       @media (min-width: 768px) {
         .e-page__title {
-          --b-size: 750px;
+          --b-size: 660px;
           --b-speed: 2s;
           position: relative;
           display: flex;
@@ -104,9 +108,10 @@
           position: absolute;
           content: "";
           width: 100%;
-          height: 250px;
+          height: 220px;
           border-radius: 50%;
-          border: 1px solid var(--white);
+          border: 2px solid rgba(255, 255, 255, 0.3);
+          background-color: rgba(0, 0, 0, 0.2);
           display: flex;
           flex-shrink: 0;
         }
