--- a/src/index.html
+++ b/src/index.html
@@ -409,10 +409,19 @@
               <li class="cases__item">
                 <div class="cases__item-img">
                   <picture>
-                    <source media="(min-width: 1280px)" srcset="./assets/img/cases/cs-1.jpg" />
-                    <source media="(min-width: 768px)" srcset="./assets/img/cases/cs-1-tab.jpg" />
-                    <source media="(min-width: 320px)" srcset="./assets/img/cases/cs-1-mob.jpg" />
-                    <img src="./assets/img/cases/cs-1.jpg" alt="project" />
+                    <source
+                      srcset="./assets/img/portfolio/p-d-1@2x.jpg 2x, ./assets/img/portfolio/p-d-1.jpg 1x"
+                      media="(min-width: 1280px)"
+                    />
+                    <source
+                      srcset="./assets/img/portfolio/p-t-1@2x.jpg 2x, ./assets/img/portfolio/p-t-1.jpg 1x"
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./assets/img/portfolio/p-t-1@2x.jpg 2x, ./assets/img/portfolio/p-t-1.jpg 1x"
+                      media="(max-width: 767px)"
+                    />
+                    <img src="./assets/img/portfolio/p-t-1.jpg" alt="project" />
                   </picture>
                 </div>
                 <div class="cases__item-info">
@@ -428,10 +437,19 @@
               <li class="cases__item">
                 <div class="cases__item-img">
                   <picture>
-                    <source media="(min-width: 1280px)" srcset="./assets/img/cases/cs-2.jpg" />
-                    <source media="(min-width: 768px)" srcset="./assets/img/cases/cs-2-tab.jpg" />
-                    <source media="(min-width: 320px)" srcset="./assets/img/cases/cs-2-mob.jpg" />
-                    <img src="./assets/img/cases/cs-2.jpg" alt="project" />
+                    <source
+                      srcset="./assets/img/portfolio/p-d-2@2x.jpg 2x, ./assets/img/portfolio/p-d-2.jpg 1x"
+                      media="(min-width: 1280px)"
+                    />
+                    <source
+                      srcset="./assets/img/portfolio/p-t-2@2x.jpg 2x, ./assets/img/portfolio/p-t-2.jpg 1x"
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./assets/img/portfolio/p-t-2@2x.jpg 2x, ./assets/img/portfolio/p-t-2.jpg 1x"
+                      media="(max-width: 767px)"
+                    />
+                    <img src="./assets/img/portfolio/p-t-2.jpg" alt="project" />
                   </picture>
                 </div>
                 <div class="cases__item-info">
@@ -446,12 +464,28 @@
                 </div>
               </li>
               <li class="cases__item">
+                <div class="cases__item-text">
+                  <img src="./assets/img/portfolio/logo/logo-3.svg" alt="logo" />
+                  <p class="p-1">
+                    The Israel Broadcast TV app provides live and on-demand access to top Israeli channels, available on
+                    mobile, TV, and web platforms.
+                  </p>
+                </div>
                 <div class="cases__item-img">
                   <picture>
-                    <source media="(min-width: 1280px)" srcset="./assets/img/cases/cs-3.jpg" />
-                    <source media="(min-width: 768px)" srcset="./assets/img/cases/cs-3-tab.jpg" />
-                    <source media="(min-width: 320px)" srcset="./assets/img/cases/cs-3-mob.jpg" />
-                    <img src="./assets/img/cases/cs-3.jpg" alt="project" />
+                    <source
+                      srcset="./assets/img/portfolio/p-d-3@2x.jpg 2x, ./assets/img/portfolio/p-d-3.jpg 1x"
+                      media="(min-width: 1280px)"
+                    />
+                    <source
+                      srcset="./assets/img/portfolio/p-t-3@2x.jpg 2x, ./assets/img/portfolio/p-t-3.jpg 1x"
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./assets/img/portfolio/p-t-3@2x.jpg 2x, ./assets/img/portfolio/p-t-3.jpg 1x"
+                      media="(max-width: 767px)"
+                    />
+                    <img src="./assets/img/portfolio/p-t-3.jpg" alt="project" />
                   </picture>
                 </div>
                 <div class="cases__item-info">
