--- a/src/contact-us.html
+++ b/src/contact-us.html
@@ -112,7 +112,6 @@
                       data-error-message="Invalid format"
                       aria-describedby="phone-error"
                     />
-                    <!--                  <span class="icon-call icon"></span>-->
                   </div>
                   <span class="p-4 form__error phone-error" id="user-phone-error" aria-live="polite"></span>
                 </div>
@@ -198,7 +197,7 @@
         </picture>
       </div>
     </section>
-    <load src="./components/request_popup.html" />
+    <!--    <load src="./components/request_popup.html" />-->
     <load src="./components/popup-mini.html" />
     <load src="./components/footer.html" />
 
